Fix bug where main content wwould not wrap around sider extended state

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,6 @@ body {
   box-sizing: border-box;
   font-family: Arial, sans-serif;
   height: 100%;
-  overflow-x: hidden;
 }
 
 @keyframes pop-up {
